# Project_memory_cards

./: Backend_of_memory_cards.cpp  CMakeLists.txt  comms  last version
Final_project/: CMakeLists.txt  game_card.h  graphics.cpp  logic.cpp
tests/: CMakeLists.txt  card_actions.cpp  card_logic_tests.cpp  mocks.cpp  mocks.h  test_main.cpp
working_variant/: game_card.h  graphics.cpp  logic.cpp
